# robinhood

./: .gitignore  CMakeLists.txt  README.md  SConscript  download_graph_large.sh  download_graph_small.sh  download_matrix.sh  setup_data.sh  setup_env.sh
apps/: CMakeLists.txt
apps/gcn_vanilla/: Makefile  gcn.udw  gcn_udkvmsr.py  gcn_udkvmsr_exe_nlb.hpp  gcn_udkvmsr_exe_nlb.py  gcn_udkvmsr_exe_rh_nlbstrm_off.hpp  gcn_udkvmsr_exe_rh_nlbstrm_off.py  gcn_udkvmsr_exe_rh_nlbstrm_on.hpp  gcn_udkvmsr_exe_rh_nlbstrm_on.py  gcn_udkvmsr_exe_rh_random.hpp  gcn_udkvmsr_exe_rh_random.py  gcn_udkvmsr_exe_ws.hpp  gcn_udkvmsr_exe_ws.py  gcn_vanilla.cpp  makelog  run.sh  run_benchmark.sh  run_one_set.sh
apps/js/: Makefile  js.cpp  js.udw  js_udkvmsr.py  js_udkvmsr_exe_nlb.hpp  js_udkvmsr_exe_nlb.py  js_udkvmsr_exe_rh_nlbstrm_off.hpp  js_udkvmsr_exe_rh_nlbstrm_off.py  js_udkvmsr_exe_rh_nlbstrm_on.hpp  js_udkvmsr_exe_rh_nlbstrm_on.py  js_udkvmsr_exe_rh_random.hpp  js_udkvmsr_exe_rh_random.py  js_udkvmsr_exe_ws.hpp  js_udkvmsr_exe_ws.py  prep.sh  run.sh  run_one_set.sh
apps/pr/: GenDataLocMSRPagerankEFA.py  GenMSRBalancedPagerankEFA.py  GenMSRPagerankEFA.py  Makefile  PagerankMsrEFA.hpp  PagerankMsrEFA.py  PagerankMsrEFA_nlb.hpp  PagerankMsrEFA_nlb.py  PagerankMsrEFA_rh_nlbstrm_off.hpp  PagerankMsrEFA_rh_nlbstrm_off.py  PagerankMsrEFA_rh_nlbstrm_on.hpp  PagerankMsrEFA_rh_nlbstrm_on.py  PagerankMsrEFA_rh_random.hpp  PagerankMsrEFA_rh_random.py  PagerankMsrEFA_ws.hpp  PagerankMsrEFA_ws.py  balancedPagerankMapShuffleReduce.cpp  dataLocPagerankMapShuffleReduce.cpp  pagerankBaseline.cpp  pagerankMapShuffleReduce.cpp  pr.cpp  prep.sh  preprocess_pagerank.cpp  run.sh  run_one_set.sh  run_pr.sh  vertex_split.py
apps/scaleup/: Makefile  coo2csr.py  duplicate_coo  duplicate_coo.cpp  duplicate_csr  duplicate_csr.cpp  prep.sh  run.sh
apps/sorting/: 1.out  Makefile  makelog  parallel_prefix.cpp  phase1_insertion_kvmsr.py  phase1_insertion_kvmsr_module.py  phase1_insertion_lb_kvmsr.py  phase1_insertion_lb_kvmsr_module.py  phase1_kvmsr copy.py  phase1_kvmsr.py  phase1_kvmsr_module.py  phase2_kvmsr.py  phase2_kvmsr_module.py  phase2_lb_kvmsr.py  phase2_lb_kvmsr_module.py  phase2_mapper_kvmsr.py  phase2_mapper_kvmsr_module.py  phase2_mapper_lb_kvmsr.py  phase2_mapper_lb_kvmsr_module.py  phase3_kvmsr.py  phase3_kvmsr_module.py  run.sh  run_one_set.sh  sorting.cpp  sorting.py  sorting.udw  sorting.udwh  sortingEFA_nlb_insertion.hpp  sortingEFA_nlb_insertion.py  sortingEFA_nlb_map.hpp  sortingEFA_nlb_map.py  sortingEFA_nlb_reduce.hpp  sortingEFA_nlb_reduce.py  sortingEFA_rh_nlbstrm_off_insertion.hpp  sortingEFA_rh_nlbstrm_off_insertion.py  sortingEFA_rh_nlbstrm_off_map.hpp  sortingEFA_rh_nlbstrm_off_map.py  sortingEFA_rh_nlbstrm_off_reduce.hpp  sortingEFA_rh_nlbstrm_off_reduce.py  sortingEFA_rh_nlbstrm_on_insertion.hpp  (+21 more)
apps/spmv_coo/: Makefile  gen_data.py  original_spmvMSR.py  run.sh  run_benchmark.sh  run_one_set.sh  simple_spmv_udweave.cpp  spmv.py  spmv.udw  spmvMSR.hpp  spmvMSR.py  spmvMSREFA.py  spmvMSR_nlb.hpp  spmvMSR_nlb.py  spmvMSR_rh_nlbstrm_off.hpp  spmvMSR_rh_nlbstrm_off.py  spmvMSR_rh_nlbstrm_on.hpp  spmvMSR_rh_nlbstrm_on.py  spmvMSR_rh_random.hpp  spmvMSR_rh_random.py  spmvMSR_ws.hpp  spmvMSR_ws.py  spmv_coo.cpp  spmv_udkvmsr.cpp  testEFA.py
apps/spmv_csr/: Makefile  coo2csr.py  coo2csr_bin.py  coo_generator.py  makelog  prep.sh  run.sh  run_benchmark.sh  run_one_set.sh  spmv.udw  spmvConfig.py  spmvLBMSRModule.py  spmvLBMSRPerfFileTest.cpp  spmvMSRModule.py  spmvMSRPerfFileTest.cpp  spmvMSRPerfTest.cpp  spmv_csr.cpp  spmv_lbmsr_exe.hpp  spmv_lbmsr_exe.py  spmv_lbmsr_exe_nlb.hpp  spmv_lbmsr_exe_nlb.py  spmv_lbmsr_exe_rh_nlbstrm_on.hpp  spmv_lbmsr_exe_rh_nlbstrm_on.py  spmv_lbmsr_exe_rh_random.hpp  spmv_lbmsr_exe_rh_random.py  spmv_lbmsr_exe_ws.hpp  spmv_lbmsr_exe_ws.py  spmv_msr_exe.hpp  spmv_msr_exe.py
apps/tc/: Makefile  prep.sh  run.sh  run_one_set.sh  run_tc.sh  tc.cpp  tc.udw  tc_udkvmsr.py  tc_udkvmsr_exe_nlb.hpp  tc_udkvmsr_exe_nlb.py  tc_udkvmsr_exe_rh_nlbstrm_off.hpp  tc_udkvmsr_exe_rh_nlbstrm_off.py  tc_udkvmsr_exe_rh_nlbstrm_on.hpp  tc_udkvmsr_exe_rh_nlbstrm_on.py  tc_udkvmsr_exe_rh_random.hpp  tc_udkvmsr_exe_rh_random.py  tc_udkvmsr_exe_ws.hpp  tc_udkvmsr_exe_ws.py
basimruntime/: CMakeLists.txt
basimruntime/include/: basim_stats.hh  basimupdown.h  globalSegmentManager.hh
basimruntime/src/: basimupdown.cpp
basimruntime/tests/: CMakeLists.txt  dram_tests.cpp  dram_tests.py  dram_tests_CHUNK1.py  dram_tests_CHUNK2.py  dram_tests_CHUNK3.py  dram_tests_CHUNK4.py  dram_tests_CHUNK5.py  dram_tests_CHUNK6.py  dram_tests_CHUNK7.py  dram_tests_CHUNK8.py  fibonacci_recursion.py  fibonacci_test.cpp  fork_join.cpp  fork_join.py  multilevel_fork_join.cpp  multilevel_fork_join.py  sendpolicy_test.cpp  sendpolicy_test.py  sendtest.cpp  sendtest.py  testDramalloc.cpp  testDramalloc.py
libraries/: CMakeLists.txt
libraries/DistributedSort/: README.md  distributed_sort.py
libraries/LMStaticMaps/: LMStaticMap.py  LMStaticMap.udwh
libraries/SingleLaneSort/: hybrid.udw  hybrid_single_lane.py
libraries/SpMalloc/: README.md  SpMalloc.py  heap_simulator.py  heap_validator.py  link_assemble.sh  spmalloc_test_exe.hpp  spmalloc_test_exe.py  testSpMalloc.cpp  testSpMallocEFA.py
libraries/UDMapShuffleReduce/: GlobalSync.py  KVMSRMachineConfig.py  KVMapShuffleReduceTPL.py  KVMapShuffleReduceTPL_basim.py  KeyValueSetTPL.py  Macro.py  README.md  ScratchpadCache.py  lbTestEFA.py  spmvLBTestEFA.py  spmv_lb_udkvmsr.cpp  test.py  test_lb_udkvmsr.cpp  testspmv.cpp
runtime/: CMakeLists.txt
runtime/include/: event.h  networkid.h  operands.h  ud_machine.h  updown.h  updown_config.h  updown_config_largePGA.h  updown_config_normal.h  updown_config_original.h
runtime/src/: updown.cpp
runtime/tests/: CMakeLists.txt  event_t.cpp  operands_t.cpp  rt_mm_malloc_free.cpp
udbasim/: CMakeLists.txt  README.md  setup_env.sh
udbasim/accel/: CMakeLists.txt
udbasim/assembler/: README.md  UpDown_Assembler.py  UpDown_Assembler_helper.py  efa2bin.py  efa2bin_inteface.py  efa2binall.py  enc_gen.py  (+1 more)
(+278 files in other folders)
